--- a/JenkinsFile
+++ b/JenkinsFile
@@ -56,8 +56,9 @@ pipeline {
                     git config user.email "shehanon1@gmail.com"
                     git config user.name "Shehan Arampola"
                     BUILD_NUMBER=${BUILD_NUMBER}
-                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" deployment.yml
+                    pwd
                     ls -ltr
+                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" deployment.yml
                     git add deployment.yml
                     git commit -m "Update deployment image to version ${BUILD_NUMBER}"
                     git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
