--- a/JenkinsFile
+++ b/JenkinsFile
@@ -54,12 +54,12 @@ pipeline {
             withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                 sh '''
                     git config user.email "shehanon1@gmail.com"
-                    git config user.name "Shehan Arampola"
+                    git config user.name "Shehan"
                     BUILD_NUMBER=${BUILD_NUMBER}
 
                     # Clone the CICD-Project-1-Manifest repository
                     git clone https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME}.git
-                    
+
                     cd ${GIT_REPO_NAME}
 
                     # Switch to the main branch (if needed)
