--- a/JenkinsFile
+++ b/JenkinsFile
@@ -68,7 +68,7 @@ pipeline {
 
                     # Make the required changes and commit
                     git checkout main
-                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" deployment.yml
+                    sed -i '/shehan404\/ultimate-cicd:/ {N; s/\(shehan404\/ultimate-cicd:\)\(.*\)/\1${BUILD_NUMBER}/}' deployment.yml
                     git add deployment.yml
                     git commit -m "Update deployment image to version ${BUILD_NUMBER}"
                     git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
