--- a/JenkinsFile
+++ b/JenkinsFile
@@ -68,13 +68,10 @@ pipeline {
 
                     # Make the required changes and commit
                     git checkout main
-                    sh "sed -i 's|image: shehan404/ultimate-cicd:.*|image: shehan404/ultimate-cicd:${buildNumber}|' deployment.yml"
+                    sed -i 's/\\(shehan404/ultimate-cicd:\\)[^ ]*/\\1${BUILD_NUMBER}/' deployment.yml
                     git add deployment.yml
                     git commit -m "Update deployment image to version ${BUILD_NUMBER}"
                     git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
-                 
-                    
-                    
                   '''
             }
         }
